--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.+'
     compile 'com.google.android.gms:play-services-maps:6.5.+'
     compile 'com.google.android.gms:play-services-location:6.5.+'
+    compile 'com.squareup.retrofit:retrofit:1.8.+'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.1.0'
+    compile 'com.squareup.okhttp:okhttp:2.1.0'
     compile 'com.squareup.picasso:picasso:2.4.+'
-    compile 'com.octo.android.robospice:robospice:1.4.14'
-    compile 'com.octo.android.robospice:robospice-retrofit:+'
     compile 'com.jakewharton:butterknife:6.0.0'
 }
