Added ability too get photos from previous weeks.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.+'
     compile 'com.octo.android.robospice:robospice:1.4.14'
     compile 'com.octo.android.robospice:robospice-retrofit:+'
+    compile 'com.squareup.okhttp:okhttp:2.1.+'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.1.+'
     compile 'com.jakewharton:butterknife:6.0.0'
 }
