--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'io.reactivex:rxandroid:0.24.0'
+    compile project(':PersistentSearch-master')
 }
