--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
+    compile 'com.jakewharton.timber:timber:2.7.1'
     compile 'com.squareup.picasso:picasso:2.5.+'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
