--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,20 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.google.android.gms:play-services-maps:7.+'
     compile 'com.google.android.gms:play-services-location:7.+'
+
+    // Network
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.jakewharton.timber:timber:2.7.1'
     compile 'com.squareup.picasso:picasso:2.5.+'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'io.reactivex:rxandroid:0.24.0'
+
+    // Utility
+    compile 'com.jakewharton.timber:timber:2.7.1'
     compile 'frankiesardo:icepick:3.0.2'
     provided 'frankiesardo:icepick-processor:3.0.2'
+
+    // Ui
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile project(':PersistentSearch-master')
 }
