--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.google.android.gms:play-services-maps:7.+'
     compile 'com.google.android.gms:play-services-location:7.+'
+    compile 'com.google.maps.android:android-maps-utils:0.3+'
 
     // Network
     compile 'com.squareup.retrofit:retrofit:1.9.0'
