--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 22
@@ -41,11 +56,13 @@ dependencies {
 
     // Utility
     compile 'com.jakewharton.timber:timber:3.0.+'
-    provided 'frankiesardo:icepick-processor:3.0.2'
 
     // Ui
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup:android-times-square:1.6.1@aar'
     compile 'com.github.johnkil.android-robototextview:robototextview:2.3.0'
     compile project(':PersistentSearch-master')
+    compile('com.twitter.sdk.android:twitter:1.4.0@aar') {
+        transitive = true;
+    }
 }
