--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:22.1'
-    compile 'com.android.support:appcompat-v7:22.1'
+    compile 'com.android.support:recyclerview-v7:22.+'
+    compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.google.android.gms:play-services-maps:7.+'
     compile 'com.google.android.gms:play-services-location:7.+'
     compile 'com.google.maps.android:android-maps-utils:0.3+'
