--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.+'
     compile 'io.reactivex:rxandroid:0.24.0'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 
     // Utility
     compile 'com.jakewharton.timber:timber:3.0.+'
