--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,22 +46,19 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:7.+'
     compile 'com.google.android.gms:play-services-location:7.+'
     compile 'com.google.maps.android:android-maps-utils:0.3+'
-
     // Network
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.+'
     compile 'io.reactivex:rxandroid:0.24.0'
-
     // Utility
     compile 'com.jakewharton.timber:timber:3.0.+'
-
     // Ui
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup:android-times-square:1.6.1@aar'
     compile 'com.github.johnkil.android-robototextview:robototextview:2.3.0'
-    compile project(':PersistentSearch-master')
+    compile 'com.balysv.materialmenu:material-menu:1.5.1'
     compile('com.twitter.sdk.android:twitter:1.4.0@aar') {
         transitive = true;
     }
