--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:0.24.0'
     // Utility
     compile 'com.jakewharton.timber:timber:3.0.+'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     // Ui
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup:android-times-square:1.6.1@aar'
