--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.+'
     compile 'io.reactivex:rxandroid:0.24.0'
+    compile('com.twitter.sdk.android:twitter:1.4.0@aar') {
+        transitive = true;
+    }
     // Utility
     compile 'com.jakewharton.timber:timber:3.0.+'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
@@ -61,7 +64,6 @@ dependencies {
     compile 'com.squareup:android-times-square:1.6.1@aar'
     compile 'com.github.johnkil.android-robototextview:robototextview:2.3.0'
     compile 'com.balysv.materialmenu:material-menu:1.5.1'
-    compile('com.twitter.sdk.android:twitter:1.4.0@aar') {
-        transitive = true;
-    }
+    compile 'com.github.ozodrukh:CircularReveal:1.0.6@aar'
+    compile 'com.github.asyl.animation:arcanimator:1.0.0'
 }
