--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,6 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://clojars.org/repo/" }
+        maven { url "http://bright.github.io/maven-repo/" }
     }
 }
