--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.binaryfork.onmap"
@@ -45,19 +45,19 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.google.android.gms:play-services-maps:7.+'
     compile 'com.google.android.gms:play-services-location:7.+'
-    compile 'com.google.maps.android:android-maps-utils:0.3+'
+    compile 'com.google.maps.android:android-maps-utils:0.3.4'
     compile 'com.android.support:design:22.2.0'
     // Network
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.picasso:picasso:2.5.+'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex:rxandroid:0.24.0'
     compile('com.twitter.sdk.android:twitter:1.4.0@aar') {
         transitive = true;
     }
     // Utility
-    compile 'com.jakewharton.timber:timber:3.0.+'
+    compile 'com.jakewharton.timber:timber:3.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     // Ui
@@ -67,8 +67,7 @@ dependencies {
     compile 'com.balysv.materialmenu:material-menu:1.5.1'
     compile 'com.github.ozodrukh:CircularReveal:1.0.6@aar'
     compile 'com.github.asyl.animation:arcanimator:1.0.0'
-    compile('mateuszklimek.framevideoview:framevideoview:1.1.0@aar')
-
+    compile 'mateuszklimek.framevideoview:framevideoview:1.1.0@aar'
+    compile 'com.binaryfork:spanny:1.0.2'
     compile 'org.slf4j:slf4j-simple:1.7.12'
-
 }
